--- a/index.html
+++ b/index.html
@@ -4,13 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+      <div id="global-container">
+        <img src="/images/phones.png" alt="phones" id="phone"/>
+        <div id="inner-container">
+          <header>
+            <img src="/images/brand.png" alt="instagram-logo" />
+            <button>
+              <img src="/images/home.png" alt="home-icon" /> Log in
+            </button>
+          </header>
+          <article>
+            <h2>
+              Instagram Capture and Share <br />
+              the World's Moments
+            </h2>
+            <p>
+              Instagram is a <strong>fast</strong>,
+              <strong>beautiful</strong> and <strong>fun</strong> way to share
+              your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+
+            <img
+              src="/images/badge-iphone.png"
+              alt="Iphone app store download"
+              class="badges"
+            />
+            <img
+              src="/images/badge-android.png"
+              alt="Android app store download"
+              class="badges"
+            />
+          </article>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li id="copyright">&copy2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
