--- a/index.html
+++ b/index.html
@@ -4,13 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css"> 
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+      <!-- HEADER STARTS-->
+      <header>
+        <div id="top">
+          <img id="brand"  src="images/brand.png" alt="Logo">
+          <div class="buttom">
+            <img id="home"   src="images/home.png" alt= "log-in"> 
+            <p class="log-in">Log In</p>
+          </div>
+        </div>
+      </header>
+      <!-- T HEADER ENDS-->
+
+      <!-- MAIN SECTION STARTS  -->
+  
+    <main id= "middle">
+ <!-- PHONE IMAGE -->
+      <div id= "Iphone">
+        <img id= "phone" src="images/phones.png" alt= "Phone">
+      </div>
+    <!-- PHONE IMAGE ENDS -->
+
+  <!-- BOX TEXT  STARTS  -->
+    <div id= "box-text">
+      <h3>Capture and Share <br> the World's Moments</h3> 
+      <p>Instagram is a <b> fast,beautiful </b> and <b>fun</b> way to share your life with friends and family. 
+      <br>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p> 
+      <br>
+      <div id= "tiendas">
+        <img src="images/badge-iphone.png" alt= "App Store">
+        <img src="images/badge-android.png" alt="Android Store">
+      </div> 
+    </div>
+<!-- BOX'S TEXT ENDS  -->
+    </main>
+
+<!-- MAIN SECTION ENDS  -->
+
+<!-- FOOTER SECTION STARTS  -->
+
+  <footer>
+    <nav id="navfooter">
+      <ul>
+        <li><a href="#"> Aboout Us</a></li>
+        <li><a href="#"> Support </a></li>
+        <li><a href="#"> Blog </a></li>
+        <li><a href="#"> Press </a></li>
+        <li><a href="#"> Api </a></li>
+        <li><a href="#"> Jobs </a></li>
+        <li><a href="#"> Privacy</a></li>
+        <li><a href="#"> Terms </a></li>
+        <li><a href="#"> Terms </a></li>
+        <li id="copyright"> &copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
+</body>
 </html>
