--- a/index.html
+++ b/index.html
@@ -4,13 +4,154 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- don't forget to link your styles -->
+
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="colores">
+      <div class="blue">
+
+      </div>
+      <div class="colorWhite">
+
+
+      </div>
+
+
+
+
+    </div>
+
+
+
+    <div class="container">
+      <div class="phone">
+        <img src="images/phones.png" alt="">
+      </div>
+
+
+      <div class="principal">
+
+        <div class="cameralogin">
+
+
+            <img src="images/brand.png" alt="">
+
+
+
+
+                <button class="myButton" type="submit" >
+                  <img src="images/home.png" alt="">
+                  Log in
+
+
+
+
+
+                </button>
+
+
+
+
+        </div>
+
+        <div class="insbotons">
+          <article class="art">
+            <h1>
+              Instagram Capture and Share the World's Moments
+
+            </h1>
+
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with
+              riends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              Oh yeah, did we mention it's free?
+            </p>
+
+
+
+
+
+
+          </article>
+
+          <div>
+            <img src="images/badge-iphone.png" alt="">
+
+
+            <img src="images/badge-android.png" alt="">
+
+
+          </div>
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+      </div>
+
+
+
+    </div>
+
+
+
+    <footer>
+      <ul>
+        <li>
+          Abouts us
+        </li>
+        <li>
+          Support
+        </li>
+        <li>
+          Blog
+        </li>
+        <li>
+          Press
+        </li>
+        <li>
+          Api
+        </li>
+        <li>
+          Jobs
+        </li>
+        <li>
+          Privacy
+        </li>
+        <li>
+          Terms
+        </li>
+
+
+
+
+      </ul>
+    </footer>
+
+
+
+
+
+
+
+
   </body>
+
+
 </html>
+
+
+
+
+  <!-- Download on the App Store Get it on Google Play About Us Support Blog Press API -->
+    <!-- Jobs Privacy Terms &copy; 2014 Instagram -->
