--- a/index.html
+++ b/index.html
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
-</html>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <img src="./images/bgtile.png" alt="fondo" id="imgBackground">
+  <section id="center-body">
+    <img src="./images/phones.png" alt="iphone" id="image-iphone">
+    <div id="box-text">
+      <div class="same-line">
+        <img src="./images/brand.png" alt="instagram-logo">
+
+        <a href="#" class="same-line" id="boton-login">
+          <img src="./images/home.png" alt="casa">
+          <h3>Log in</h3>
+        </a>
+      </div>
+      <div id="fondo-info">
+        <h1>Capture and Share
+          <br>The World´s Moments </h1>
+        <p>
+          Instagram is a <span class="bold">fast</span>, <span class="bold">beautiful</span> and <span
+            class="bold">fun</span>
+          </span> way to share your life with
+          friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram it's that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
+      <section id="img-padding">
+        <img src="./images/badge-iphone.png" alt="">
+        <img src="./images/badge-android.png" alt="">
+
+
+    </div>
+
+  </section>
+  </section>
+  <section class="words">
+    <ul class="same-line">
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+      <li class="insta">@2014 INSTAGRAM</li>
+    </ul>
+  </section>
+</body>
