--- a/index.html
+++ b/index.html
@@ -6,46 +6,48 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  <div class=upper-container>  
-    <div> 
-     <img src="./images/phones.png" alt="Instagram view">
+
+  <div class="upper-container">
+
+    <div class="container-wrap image">
+      <img src="./images/phones.png" alt="Instagram view">
     </div>
-    <div>
-      <img src="./images/brand.png"  alt="Instagram">
-      <button class=login-CTA>
-      <img src="./images/home.png" alt="home">
-      <p>Log in</p>
-      </button>
-      <div>
+
+    <div class="container-wrap right-text">
+
+      <div class="logo-bar"> 
+        <img src="./images/brand.png"  alt="Instagram">
+        <button class="login-CTA"> Log in </button>
+      </div>
+
+      <div class="main-body">
        <h1>Capture and Share the World's Moments</h1> 
-          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
-            friends and family. </p>
-          </br>
+         <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-          </br>  
           <p>Oh yeah, did we mention it's free?</p>
       </div>
-      <div>
-        Download on the App Store
-        Get it on Google Play
+
+      <div class="download-app">
+        <img src="./images/badge-iphone.png"  alt="App Store">
+        <img src="./images/badge-android.png"  alt="Google Play Store">
       </div>
+
     </div>
+
   </div>
 
-<footer>
-  <div>
-    <ul class=footer>  
-    <li>About Us</li>
-    <li>Support</li>
-    <li> Press</li>
-    <li> API</li>
-    <li> Jobs</li>
-    <li> Privacy</li>
-    <li> Terms</li>
-    <li id=trademark> &copy; 2014 Instagram</li>
+  <footer>
+    <ul class="footer-links">  
+      <li>About Us</li>
+      <li>Support</li>
+      <li> Press</li>
+      <li> API</li>
+      <li> Jobs</li>
+      <li> Privacy</li>
+      <li> Terms</li>
+      <li id="trademark"> &copy; 2014 Instagram</li>
     </ul>
-  </div>
-</footer>
-  </body>
+  </footer>
+</body>
 </html>
