--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link href="styles/style.css"
+    rel="stylesheet" type="text/css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class=container>
+    <div id=iphone>
+      <img class="mobilePHone" src=images/phones.png alt="Two Mobile Phones"/>
+    </div>
+  <div class=section1-2>
+    <section class=section1> 
+      <img class="logoInstagram" src=images/brand.png alt="Logo Instagram"/>
+      <a href="#" id=logIn> <img class=house src=images/home.png>Log in</a>
+    </section>
+
+    <section class=section2>
+     <h1>Capture and Share <br/> the World's Moments</h1> 
+     <p class=p1>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+      friends and family</p>
+      <p class=p2>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p class=p3>Oh yeah, did we mention it's free?</p>
+     <img class=appStore src=images/badge-iphone.png alt="Download on the AppStore"/>
+     <img class=googlePlay src=images/badge-android.png alt="Get it on Google play"/>
+    </section>
+  </div> 
+</div>
+
+      <nav class=barra>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li id="grey"> &copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+
+   
   </body>
 </html>
