--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css"/>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+    <section id="phone-section">
+      <img id="iphones" src="images/phones.png" alt="iphone"/>
+    </section>
+  <section id="header-login">
+    <div id="header">
+      <div id="ig-logo">
+        <img src="images/brand.png" alt="instagram logo"/>
+      </div>
+      <div id="login-btn">
+        <button><img src="images/home.png" alt="house"/> Log in</button>
+      </div>
+    </div>
+  </section>
+    <section id="main-section">
+      <div>
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+           it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="app-store">
+        <img src="images/badge-iphone.png" alt="app store"/>
+        <img src="images/badge-android.png" alt="google play store"/>
+      </div>
+    </section>
+    <footer id="bottom-links">
+      <div id="links">
+        <ul>
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+        </ul>
+      </div>
+
+    </footer>
+    <!--  Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram -->
   </body>
 </html>
