--- a/index.html
+++ b/index.html
@@ -5,12 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="general" class="container column justify-between align-center">
+
+      <section class="container row justify-center align-center">
+        <img src="/images/phones.png" alt="">
+
+        <div id="instagram" class="container column">
+          <div id="brand" class="container row justify-between">
+            <img src="/images/brand.png" alt="brand">
+
+            <a href="#">            
+              <div id="login" class="white">
+              <ul class="container row negrita">
+                <li><img src="/images/home.png" alt=""></li>
+                <li class="link">Log in</li>
+              </ul>
+            </div></a>
+
+
+          </div>
+
+          <div id="card">
+            <h2 class="padding-left-2 dark-blue">
+              Instagram Capture and Share the World's Moments
+            </h2>
+            <p class="padding-left-2 padding-right">
+              Instagram is a fast, beautiful and fun way to share your life with
+              friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              Oh yeah, did we mention it's free?
+            </p>
+
+            <div id="store" class="container row justify-start padding-left-2 margin-right">
+              <a href="#"><img src="/images/badge-iphone.png" alt="Download on the App Store"></a>
+              <a href="#"><img src="/images/badge-android.png" alt="Get it on Google Play"></a>
+            </div>
+
+
+          </div>
+  
+        </div>
+
+      </section>
+
+
+      <footer class="container row">
+        <ul class="container light-blue negrita">
+          <li class="link"><a href="#">About Us</a></li>
+          <li class="link"><a href="#">Support</a></li>
+          <li class="link"><a href="#">Blog</a></li>
+          <li class="link"><a href="#">Press</a></li>
+          <li class="link"><a href="#">API</a></li>
+          <li class="link"><a href="#">Jobs</a></li>
+          <li class="link"><a href="#">Privacy</a></li>
+          <li class="link"><a href="#">Terms</a></li>
+          <li class="grey link">&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+
+    </div>
   </body>
 </html>
