--- a/index.html
+++ b/index.html
@@ -5,12 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="Left-and-right">
+      <div id="Left-side">
+        <img src="images/phones.png" alt= "Phones Image"/>
+      </div>
+      <div id="Right-side">
+        <div id="right-top">
+          <img src="images/brand.png" alt="Logo"/>
+          <div id="login-button">
+            <img src="images/home.png" alt="Login"/>
+            <button class="btn">Log In</button>
+          </div>
+        </div>
+        <div id="Right-middle">
+          <h1>Capture and Share</br> the World's Moments</h1>
+          <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br/> 
+            with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look<br/>
+              and feel, then post to Instagram &mdash; it's that easy. You can<br/>
+              even share to Facebook, Twitter, Tumblr and more. It's a<br/>
+              new way to see the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div id="Right-Bottom">
+          <div><img src="images/badge-iphone.png" alt="app store image"/></div>
+          <div><img src="images/badge-android.png" alt="google play image"/></div>
+        </div>
+      </div>
+    </div>
+  <footer>
+    <div id="footer-list">
+      <ol>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ol>
+    </div>
+    <p>&copy; 2014 Instagram</p>
+  </footer>
+  
+  
   </body>
 </html>
