--- a/index.html
+++ b/index.html
@@ -5,12 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="main">
+      <div id="content">
+        <div id="left"> 
+          <img src="images/phones.png">
+        </div>
+        <div id="right">
+          <div id="right-top">
+            <div id="logo">
+              <img src="images/brand.png">
+            </div>
+            <div id="button">
+              <img src="images/home.png">
+              Log in
+            </div>
+          </div>
+          <div id="right-middle">
+            <h2>
+              Instagram Capture and Share the World's Moments
+            </h2>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with
+              friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              Oh yeah, did we mention it's free?
+            </p>
+            <div id="right-bottom">
+              <img src="images/badge-iphone.png" alt="Download on the App Store">
+              <img src="images/badge-android.png" alt="Get it on Google Play">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="footer"><a>About Us</a> <a>Support</a> <a>Blog</a> <a>Press</a> <a>API</a> <a>Jobs</a> <a>Privacy Terms</a> &copy; 2014 Instagram
+      </div>
+    </div>
   </body>
 </html>
