--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    
+    <div class="hero" style="background-image: url(images/bgtile.png);">
+    </div>
+
+    <section class="container">
+      <div class="left-block">
+        <img src="images/phones.png" width="100%" alt="">
+      </div>
+      <div class="right-block">
+        <div class="brand">
+          <img src="images/brand.png" alt="">
+          <a href="#" class="login-btn">
+            <img src="images/home.png" alt="">
+            <span>Log in</span>
+          </a>
+        </div>
+        <div class="frame" style="background-image: url(images/frame.png);">
+            <h1>Capture and Share<br>the World's Moments</h1>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="downloads">
+              <img src="images/badge-iphone.png" alt="">
+              <img src="images/badge-android.png" alt="">
+            </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="footer">
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </section>
+
+
   </body>
 </html>
