--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="background">
+      <div class="main">
+        <div id="phone">
+          <img src="./images/phones.png" alt="phones">
+        </div>
+        <div id="lateral">
+          <div class="header">
+            <img src="./images/brand.png" alt="">
+            <button id="log-in"><img src="./images/home.png" alt="home"> <a href=""> Log in</a></button>
+          </div>
+          <div class="text">
+            <h3>Instagram Capture and Share the World's Moments</h3>
+            <p>Instagram is a fast, beautiful and fun way to share your life with
+              friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              Oh yeah, did we mention it's free?</p>
+            <div id="stores">
+              <button><img src="./images/badge-iphone.png" alt="app-store"></button>
+              <button><img src="./images/badge-android.png" alt="android-store"></button>
+            </div>
+
+          </div>
+        </div>
+        
+      </div>
+          <footer>
+            <a href="">About Us</a>
+            <a href="">Support</a>
+            <a href="">Blog</a>
+            <a href="">Press</a>
+            <a href="">API</a>
+            <a href="">Jobs</a>
+            <a href="">Privacy</a>
+            <a href="">Terms</a>
+            <p>&copy; 2014 Instagram</p>
+          </footer>
+    </div>
   </body>
 </html>
