--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id='container'>
+      <section id="left-section">
+        <img src="./images/phones.png" alt='Phones image' >
+      </section>
+      <section id='right-section'>
+        <div id='top-menu'>
+          <div id='instagram-logo'>
+            <img src="./images/brand.png" alt='Instagram logo'>
+          </div>
+          <div>
+            <button id='login-button'>
+              <img src="./images/home.png" alt="Home icon">
+              <span>Log in</span>
+            </button>
+          </div>
+        </div>
+        <article>
+          <h2>Capture and Share <br> the World's Moments</h2>
+          <p>Instagram is a <span id='boldword'>fast, beautiful</span> and <span id='boldword'>fun</span> way to share your life 
+            with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+        <div id='foot-menu'>
+          <div>
+            <img src="./images/badge-iphone.png" alt="Download on the App Store">
+          </div>
+          <div>
+            <img src="./images/badge-android.png" alt="Get it on Google Play">
+          </div>
+        </div>
+      </section>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <p>&copy; 2014 Instagram</p>
+    </footer>   
   </body>
 </html>
