--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="container-1">
+      <div id="phones-img">
+        <img src="images/phones.png" alt="phones-image">
+      </div>
+      <section>
+        <header>
+          <div>
+            <img src="images/brand.png" alt="brand-image">
+          </div>
+          <div>
+            <button id="log-in-bottom">
+              <img id="house-logo" src="images/home.png" alt="images-home"> 
+              <span>
+                <b>Log in</b>
+              </span>
+            </button>
+          </div>
+        </header>
+        <article>
+          <h2>Capture and Share<br>the World's Moments</h2>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.<br><br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+            Oh yeah, did we mention it's free?
+          </p>
+        </article>   
+        <div id="container-2">
+          <button>
+            <img src="images/badge-iphone.png" alt="adge-iphone-image">
+          </button>
+          <button>
+            <img src="images/badge-android.png" alt="badge-android-image">
+          </button>
+        </div>
+      </section>
+   </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li id="copyrigth">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
